@@ -1,5 +1,5 @@
 var utils = require("./utils"),
-    map = require("./map"),
+    urlMap = require("./urlmap"),
     route = require("./route");
 
 module.exports = buildMiddleware;
@@ -10,7 +10,7 @@ module.exports = buildMiddleware;
  * middleware they want to use in the order they will be called in the request
  * cycle.
  *
- * Instances of this middleware also have all methods from the map and route
+ * Instances of this middleware also have all methods from the urlMap and route
  * middlewares in order to simplify the number of steps needed to build an app
  * complete with a middleware pipeline, URL prefix mapping, and routing.
  *
@@ -89,7 +89,7 @@ function buildMiddleware(app) {
 
     /**
      * Creates a new build middleware and "mounts" it at the given URL prefix
-     * (the `location` argument) using a map middleware. This means that all
+     * (the `location` argument) using a urlMap middleware. This means that all
      * requests beginning with the given location are routed to this new build.
      * The `callback` is called later with the new build middleware so that it
      * may be configured further.
@@ -133,7 +133,7 @@ function buildMiddleware(app) {
 }
 
 function makeMap(app, locations) {
-    var localMap = map(app);
+    var localMap = urlMap(app);
 
     var build;
     for (var location in locations) {
