@@ -24,7 +24,7 @@ exports.Error = StrataError;
 exports.InvalidRequestBodyError = InvalidRequestBodyError;
 
 // Setup methods that can be called directly on this module that will delegate
-// to the default build/route. This is the high-level sugar API.
+// to the default build. This is the high-level sugar API.
 
 var build = require("./build");
 var _defaultApp;
@@ -393,7 +393,6 @@ var modules = {
     "gzip": "gzip",
     "jsonp": "jsonp",
     "lint": "lint",
-    "map": "map",
     "methodOverride": "methodoverride",
     "rewrite": "rewrite",
     "route": "route",
@@ -405,6 +404,7 @@ var modules = {
     "multipart": "multipart",
     "querystring": "querystring",
     "redirect": "redirect",
+    "urlMap": "urlmap",
     "utils": "utils"
 };
 
