@@ -1,7 +1,7 @@
 var strata = require("./index"),
     utils = require("./utils");
 
-module.exports = mapMiddleware;
+module.exports = urlMapMiddleware;
 
 /**
  * A middleware that provides host and/or location-based routing. Modifies
@@ -10,16 +10,22 @@ module.exports = mapMiddleware;
  * This should be taken into account in downstream apps that need to create
  * links, for example.
  *
- * Dispatch is done in such a way that the longest paths are tried first, since
- * they are the most specific.
+ *   var app = strata.urlMap();
+ *
+ *   app.map("/files", function (env, callback) {
+ *       // env.scriptName is "/files", env.pathInfo is remainder of URL
+ *   });
+ *
+ * Note: Dispatch is done in such a way that the longest paths are tried first
+ * since they are the most specific.
  */
-function mapMiddleware(app) {
+function urlMapMiddleware(app) {
     app = app || utils.notFound;
 
     var mappings = [];
     var sorted = 0;
 
-    function map(env, callback) {
+    function urlMap(env, callback) {
         var len = mappings.length;
 
         if (sorted !== len) {
@@ -87,7 +93,7 @@ function mapMiddleware(app) {
      * information as well as path information to route the request based on
      * host as well as path.
      */
-    map.map = function (location, app) {
+    urlMap.map = function (location, app) {
         var match = location.match(/^https?:\/\/(.*?)(\/.*)/),
             host;
 
@@ -111,22 +117,22 @@ function mapMiddleware(app) {
     /**
      * Specifies the app to run when no mappings match.
      */
-    map.run = function (localApp) {
+    urlMap.run = function (localApp) {
         app = localApp;
     };
 
-    return map;
+    return urlMap;
 }
 
 /**
  * Creates a new map middleware from the location/app pairs in `locationsMap`.
  */
-mapMiddleware.make = function (locationsMap) {
-    var map = mapMiddleware();
+urlMapMiddleware.make = function (locationsMap) {
+    var urlMap = urlMapMiddleware();
 
     for (var location in locationsMap) {
-        map.map(location, locationsMap[location]);
+        urlMap.map(location, locationsMap[location]);
     }
 
-    return map;
+    return urlMap;
 };
